Rename Engine Analytics API methods.
