# Endpoint/GetEngineAutoselectsCountAnalytics.php
@@ -15,7 +15,7 @@ namespace Swiftype\SiteSearch\Endpoint;
  *
  * @author  Aurélien FOUCRET <aurelien.foucret@elastic.co>
  */
-class GetAutoselectsCountAnalytics extends \Swiftype\Endpoint\AbstractEndpoint
+class GetEngineAutoselectsCountAnalytics extends \Swiftype\Endpoint\AbstractEndpoint
 {
     // phpcs:disable
     /**
